--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -14,6 +14,7 @@
 
         <ImageView
             android:id="@+id/bg"
+            android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@mipmap/default_splash_bg" />
@@ -27,6 +28,7 @@
             android:background="@mipmap/home_page_live" />
 
         <TextView
+            android:layout_marginBottom="2dp"
             android:id="@+id/tittle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
