--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -13,13 +13,14 @@
         android:padding="10dp">
 
         <ImageView
+            android:contentDescription="@string/app_name"
             android:id="@+id/bg"
-            android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@mipmap/default_splash_bg" />
 
         <ImageView
+            android:contentDescription="@string/app_name"
             android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,7 +47,6 @@
             android:layout_above="@id/tittle"
             android:layout_toRightOf="@+id/image"
             android:maxLines="1"
-            android:text="简介"
             android:textColor="#00ff00"
             android:textSize="16sp" />
     </RelativeLayout>
