--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -13,32 +13,21 @@
         android:padding="10dp">
 
         <ImageView
-            android:contentDescription="@string/app_name"
             android:id="@+id/bg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@mipmap/default_splash_bg" />
+            android:background="@mipmap/default_splash_bg"
+            android:contentDescription="@string/app_name" />
 
         <ImageView
-            android:contentDescription="@string/app_name"
             android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_margin="10dp"
-            android:background="@mipmap/home_page_live" />
+            android:background="@mipmap/home_page_live"
+            android:contentDescription="@string/app_name" />
 
-        <TextView
-            android:layout_marginBottom="2dp"
-            android:id="@+id/tittle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@+id/image"
-            android:maxLines="1"
-            android:text="歌单"
-            android:textColor="#fff"
-            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/des"
@@ -47,7 +36,19 @@
             android:layout_above="@id/tittle"
             android:layout_toRightOf="@+id/image"
             android:maxLines="1"
-            android:textColor="#00ff00"
+            android:textColor="#ccff00"
             android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/tittle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="5dp"
+            android:layout_toRightOf="@+id/image"
+            android:maxLines="1"
+            android:text="歌单"
+            android:textColor="#ffdd00"
+            android:textSize="18sp" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
