加载本地音乐,跳转播放页面

--- a/app/src/main/res/layout/fragment_vbang.xml
+++ b/app/src/main/res/layout/fragment_vbang.xml
@@ -3,10 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <!--alt + F7 快速定位使用参数-->
-    <VideoView
-        android:id="@+id/videoView"
+
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center" />
+        android:layout_height="match_parent" />
 </LinearLayout>
