1.增加通知栏播放操作：2.增加前面打包，并且重命名APK

--- a/app/src/main/res/layout/item_vbang.xml
+++ b/app/src/main/res/layout/item_vbang.xml
@@ -13,11 +13,13 @@
 
     <TextView
         android:id="@+id/tvTittle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
+        android:layout_marginRight="60dp"
         android:layout_toRightOf="@id/iv_music_logo"
+        android:singleLine="true"
         android:text="桥边姑娘" />
 
     <TextView
