--- a/app/src/main/res/layout/pop_item.xml
+++ b/app/src/main/res/layout/pop_item.xml
@@ -5,6 +5,7 @@
     android:orientation="horizontal">
 
     <TextView
+        android:singleLine="true"
         android:id="@+id/tittle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
