增加播放歌曲歌词显示，增加测试用的歌曲个歌词

--- a/app/src/main/res/layout/activity_music_player_middle.xml
+++ b/app/src/main/res/layout/activity_music_player_middle.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/animation_list" />
 
-    <cn.xiayiye5.kotlinmobilemusic.widget.LyricView
+    <cn.xiayiye5.kotlinmobilemusic.widget.LyricShowView
         android:id="@+id/lyricView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
